; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/atheros/ar531x/extr_ar5315_spi.c_ar5315_spi_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/atheros/ar531x/extr_ar5315_spi.c_ar5315_spi_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar5315_spi_softc = type { i64 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ar5315_spi_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar5315_spi_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ar5315_spi_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.ar5315_spi_softc* @device_get_softc(i32 %4)
  store %struct.ar5315_spi_softc* %5, %struct.ar5315_spi_softc** %3, align 8
  %6 = load %struct.ar5315_spi_softc*, %struct.ar5315_spi_softc** %3, align 8
  %7 = getelementptr inbounds %struct.ar5315_spi_softc, %struct.ar5315_spi_softc* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @SYS_RES_MEMORY, align 4
  %13 = load %struct.ar5315_spi_softc*, %struct.ar5315_spi_softc** %3, align 8
  %14 = getelementptr inbounds %struct.ar5315_spi_softc, %struct.ar5315_spi_softc* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @bus_release_resource(i32 %11, i32 %12, i32 0, i64 %15)
  br label %17

17:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local %struct.ar5315_spi_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
